--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </header>
 
     <p class="intro">
-      Movies of faraway lands. Giving glimpses of a foreign culture, in a foreign tongue, yet shedding light on something of our own.<br><br>
+      Movies of faraway lands. Giving glimpses of a foreign culture, in a foreign tongue, yet shedding light on something near home.<br><br>
       Welcome to <strong>Lights, Camera, UV!</strong><br><br>
       A space for those who truly live and breathe cinema — not just as entertainment, but as art, culture, and storytelling.<br><br>
       This group is meant for movie connoisseurs and enthusiasts who appreciate brilliant films from across the globe — be it world cinema, Bollywood, Hollywood, indie gems, or rare festival classics. We would also welcome people into our group who want to start on a journey of exploring them.<br><br>
