--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       Movies of faraway lands. Giving glimpses of a foreign culture, in a foreign tongue, yet shedding light on something near home.<br><br>
       Welcome to <strong>Lights, Camera, UV!</strong><br><br>
       A space for those who truly live and breathe cinema — not just as entertainment, but as art, culture, and storytelling.<br><br>
-      This group is meant for movie connoisseurs and enthusiasts who appreciate brilliant films from across the globe — be it world cinema, Bollywood, Hollywood, indie gems, or rare festival classics. We would also welcome people into our group who want to start on a journey of exploring them.<br><br>
+      This group is meant for movie connoisseurs and enthusiasts who appreciate brilliant films from across the globe — be it world cinema, Indian, Hollywood, indie gems, or rare festival classics. We would also welcome people into our group who want to start on a journey of exploring them.<br><br>
       Here, we screen and discuss masterclass films that provoke thought, stir emotions, and offer a glimpse into faraway lands, unfamiliar cultures, and untold stories.<br><br>
       Weekly screenings will be held in UV’s mini theatre, featuring classics, critically acclaimed films, hidden gems, and everything in between…
     </p>
