--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       color: #ffcc00;
       margin: 1rem 0 0.5rem;
     }
-    p.intro {
-      margin-bottom: 2rem;
+    .intro p {
+      margin-bottom: 1.2rem;
       text-align: justify;
     }
     h2 {
@@ -65,14 +65,19 @@
       <h1>Lights, Camera, UV!</h1>
     </header>
 
-    <p class="intro">
-      Movies of faraway lands. Giving glimpses of a foreign culture, in a foreign tongue, yet shedding light on something near home.<br><br>
-      Welcome to <strong>Lights, Camera, UV!</strong><br><br>
-      A space for those who truly live and breathe cinema — not just as entertainment, but as art, culture, and storytelling.<br><br>
-      This group is meant for movie connoisseurs and enthusiasts who appreciate brilliant films from across the globe — be it world cinema, Indian, Hollywood, indie gems, or rare festival classics. We would also welcome people into our group who want to start on a journey of exploring them.<br><br>
-      Here, we screen and discuss masterclass films that provoke thought, stir emotions, and offer a glimpse into faraway lands, unfamiliar cultures, and untold stories.<br><br>
-      Weekly screenings will be held in UV’s mini theatre, featuring classics, critically acclaimed films, hidden gems, and everything in between…
-    </p>
+    <div class="intro">
+      <p>Movies of faraway lands. Giving glimpses of a foreign culture, in a foreign tongue, yet shedding light on something of our own.</p>
+
+      <p>Welcome to <strong>Lights, Camera, UV!</strong></p>
+
+      <p>A space for those who truly live and breathe cinema — not just as entertainment, but as art, culture, and storytelling.</p>
+
+      <p>This group is meant for movie connoisseurs and enthusiasts who appreciate brilliant films from across the globe — be it world cinema, Bollywood, Hollywood, indie gems, or rare festival classics. We would also welcome people into our group who want to start on a journey of exploring them.</p>
+
+      <p>Here, we screen and discuss masterclass films that provoke thought, stir emotions, and offer a glimpse into faraway lands, unfamiliar cultures, and untold stories.</p>
+
+      <p>Weekly screenings will be held in UV’s mini theatre, featuring classics, critically acclaimed films, hidden gems, and everything in between…</p>
+    </div>
 
     <h2>Upcoming Screenings</h2>
     <div class="movie-list" id="upcoming-movies">
