--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+# Regenerate HTML with left-aligned text and improved readability
 
+refined_html = """
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +13,7 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: #1e1e1e;
       color: #f5f5f5;
-      line-height: 1.6;
+      line-height: 1.8;
       padding: 20px;
     }
     .container {
@@ -32,7 +34,9 @@
     }
     .intro p {
       margin-bottom: 1.2rem;
-      text-align: justify;
+      text-align: left;
+      max-width: 750px;
+      font-size: 1.05rem;
     }
     h2 {
       color: #ffcc00;
@@ -81,7 +85,6 @@
 
     <h2>Upcoming Screenings</h2>
     <div class="movie-list" id="upcoming-movies">
-      <!-- Add upcoming movies here -->
       <div class="movie">
         <strong>Movie:</strong> The Lives of Others<br>
         <strong>Picked by:</strong> Ananya<br>
@@ -91,7 +94,6 @@
 
     <h2>Past Screenings</h2>
     <div class="movie-list" id="past-movies">
-      <!-- Add past movies here -->
       <div class="movie">
         <strong>Movie:</strong> In the Mood for Love<br>
         <strong>Picked by:</strong> Rohan<br>
@@ -105,3 +107,11 @@
   </div>
 </body>
 </html>
+"""
+
+# Save to index.html
+refined_html_path = "/mnt/data/index.html"
+with open(refined_html_path, "w", encoding="utf-8") as f:
+    f.write(refined_html)
+
+refined_html_path
