--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
-# Rebuild the HTML with corrected JavaScript formatting using doubled curly braces
-final_dynamic_html = f"""
+# Define the Google Sheets published CSV URLs again
+spreadsheet_id = "1d8YbOl_5N0qf2B6k4opxR5cqYGgZtS_79-2lXNO_5Wk"
+upcoming_csv_url = f"https://docs.google.com/spreadsheets/d/{spreadsheet_id}/gviz/tq?tqx=out:csv&sheet=Upcoming%20Screenings"
+past_csv_url = f"https://docs.google.com/spreadsheets/d/{spreadsheet_id}/gviz/tq?tqx=out:csv&sheet=Past%20Screenings"
+
+# Escape JavaScript template literals correctly
+html_content = f"""
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lights, Camera, UV!</title>
+  <title>Lights, Camera, UV! - Live</title>
   <style>
     body {{
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: #1e1e1e;
       color: #f5f5f5;
-      line-height: 1.6;
+      line-height: 1.8;
       padding: 20px;
     }}
     .container {{
@@ -23,19 +28,8 @@ final_dynamic_html = f"""
       text-align: center;
       margin-bottom: 2rem;
     }}
-    header img {{
-      width: 200px;
-      height: auto;
-    }}
     h1 {{
       color: #ffcc00;
-      margin: 1rem 0 0.5rem;
-    }}
-    .intro p {{
-      margin-bottom: 1.2rem;
-      text-align: left;
-      max-width: 750px;
-      font-size: 1.05rem;
     }}
     h2 {{
       color: #ffcc00;
@@ -51,9 +45,6 @@ final_dynamic_html = f"""
       border-radius: 8px;
       margin-bottom: 1rem;
     }}
-    .movie strong {{
-      color: #ffffff;
-    }}
     footer {{
       text-align: center;
       margin-top: 3rem;
@@ -64,66 +55,50 @@ final_dynamic_html = f"""
 <body>
   <div class="container">
     <header>
-      <img src="lights-camera-uv.jpg" alt="Lights Camera UV Logo" />
       <h1>Lights, Camera, UV!</h1>
     </header>
 
-    <div class="intro">
-      <p>Movies of faraway lands. Giving glimpses of a foreign culture, in a foreign tongue, yet shedding light on something of our own.</p>
-      <p>Welcome to <strong>Lights, Camera, UV!</strong></p>
-      <p>A space for those who truly live and breathe cinema — not just as entertainment, but as art, culture, and storytelling.</p>
-      <p>This group is meant for movie connoisseurs and enthusiasts who appreciate brilliant films from across the globe — be it world cinema, Bollywood, Hollywood, indie gems, or rare festival classics. We would also welcome people into our group who want to start on a journey of exploring them.</p>
-      <p>Here, we screen and discuss masterclass films that provoke thought, stir emotions, and offer a glimpse into faraway lands, unfamiliar cultures, and untold stories.</p>
-      <p>Weekly screenings will be held in UV’s mini theatre, featuring classics, critically acclaimed films, hidden gems, and everything in between…</p>
-    </div>
-
     <h2>Upcoming Screenings</h2>
-    <div class="movie-list" id="upcoming"></div>
+    <div class="movie-list" id="upcoming-movies">Loading...</div>
 
     <h2>Past Screenings</h2>
-    <div class="movie-list" id="past"></div>
+    <div class="movie-list" id="past-movies">Loading...</div>
 
-    <footer>
-      &copy; 2025 Lights, Camera, UV!
-    </footer>
+    <footer>&copy; 2025 Lights, Camera, UV!</footer>
   </div>
 
   <script>
-    const upcomingURL = "{upcoming_gid_url}";
-    const pastURL = "{past_gid_url}";
-
-    async function loadCSVData(url, containerId) {{
-      const response = await fetch(url);
-      const data = await response.text();
-      const rows = data.trim().split('\\n').map(r => r.split(','));
+    async function loadMovies(sheetUrl, containerId) {{
+      const response = await fetch(sheetUrl);
+      const text = await response.text();
+      const rows = text.trim().split('\\n').slice(1); // Skip header
       const container = document.getElementById(containerId);
+      container.innerHTML = '';
 
-      for (let i = 1; i < rows.length; i++) {{
-        const row = rows[i];
-        const date = row[0];
-        const title = row[1];
-        const pickedBy = row[2];
-        const movieHTML = `
-          <div class="movie">
-            <strong>Movie:</strong> ${{title}}<br>
-            <strong>Picked by:</strong> ${{pickedBy}}<br>
-            <strong>Date:</strong> ${{date}}
-          </div>
-        `;
-        container.innerHTML += movieHTML;
-      }}
+      rows.forEach(row => {{
+        const columns = row.split(',');
+        const date = columns[0];
+        const title = columns[1];
+        const picker = columns[2];
+        const movieDiv = document.createElement('div');
+        movieDiv.className = 'movie';
+        movieDiv.innerHTML = '<strong>Movie:</strong> ' + title + '<br>' +
+                             '<strong>Picked by:</strong> ' + picker + '<br>' +
+                             '<strong>Date:</strong> ' + date;
+        container.appendChild(movieDiv);
+      }});
     }}
 
-    loadCSVData(upcomingURL, "upcoming");
-    loadCSVData(pastURL, "past");
+    loadMovies("{upcoming_csv_url}", "upcoming-movies");
+    loadMovies("{past_csv_url}", "past-movies");
   </script>
 </body>
 </html>
 """
 
-# Save the corrected HTML
-final_html_path = "/mnt/data/index.html"
-with open(final_html_path, "w", encoding="utf-8") as f:
-    f.write(final_dynamic_html)
+# Save the HTML file
+html_file_path = "/mnt/data/index.html"
+with open(html_file_path, "w", encoding="utf-8") as f:
+    f.write(html_content)
 
-final_html_path
+html_file_path
