--- a/index.html
+++ b/index.html
@@ -1,104 +1,107 @@
-# Define the Google Sheets published CSV URLs again
-spreadsheet_id = "1d8YbOl_5N0qf2B6k4opxR5cqYGgZtS_79-2lXNO_5Wk"
-upcoming_csv_url = f"https://docs.google.com/spreadsheets/d/{spreadsheet_id}/gviz/tq?tqx=out:csv&sheet=Upcoming%20Screenings"
-past_csv_url = f"https://docs.google.com/spreadsheets/d/{spreadsheet_id}/gviz/tq?tqx=out:csv&sheet=Past%20Screenings"
 
-# Escape JavaScript template literals correctly
-html_content = f"""
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lights, Camera, UV! - Live</title>
+  <title>Lights, Camera, UV!</title>
   <style>
-    body {{
+    body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: #1e1e1e;
       color: #f5f5f5;
-      line-height: 1.8;
+      line-height: 1.6;
       padding: 20px;
-    }}
-    .container {{
+    }
+    .container {
       max-width: 900px;
       margin: auto;
-    }}
-    header {{
+    }
+    header {
       text-align: center;
       margin-bottom: 2rem;
-    }}
-    h1 {{
+    }
+    header img {
+      width: 200px;
+      height: auto;
+    }
+    h1 {
       color: #ffcc00;
-    }}
-    h2 {{
+      margin: 1rem 0 0.5rem;
+    }
+    .intro p {
+      margin-bottom: 1.2rem;
+      text-align: justify;
+    }
+    h2 {
       color: #ffcc00;
       border-bottom: 2px solid #444;
       padding-bottom: 0.3rem;
-    }}
-    .movie-list {{
+    }
+    .movie-list {
       margin: 1rem 0 2rem;
-    }}
-    .movie {{
+    }
+    .movie {
       background-color: #2a2a2a;
       padding: 1rem;
       border-radius: 8px;
       margin-bottom: 1rem;
-    }}
-    footer {{
+    }
+    .movie strong {
+      color: #ffffff;
+    }
+    footer {
       text-align: center;
       margin-top: 3rem;
       color: #888;
-    }}
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <header>
+      <img src="lights-camera-uv.jpg" alt="Lights Camera UV Logo" />
       <h1>Lights, Camera, UV!</h1>
     </header>
 
+    <div class="intro">
+      <p>Movies of faraway lands. Giving glimpses of a foreign culture, in a foreign tongue, yet shedding light on something of our own.</p>
+
+      <p>Welcome to <strong>Lights, Camera, UV!</strong></p>
+
+      <p>A space for those who truly live and breathe cinema — not just as entertainment, but as art, culture, and storytelling.</p>
+
+      <p>This group is meant for movie connoisseurs and enthusiasts who appreciate brilliant films from across the globe — be it world cinema, Bollywood, Hollywood, indie gems, or rare festival classics. We would also welcome people into our group who want to start on a journey of exploring them.</p>
+
+      <p>Here, we screen and discuss masterclass films that provoke thought, stir emotions, and offer a glimpse into faraway lands, unfamiliar cultures, and untold stories.</p>
+
+      <p>Weekly screenings will be held in UV’s mini theatre, featuring classics, critically acclaimed films, hidden gems, and everything in between…</p>
+    </div>
+
     <h2>Upcoming Screenings</h2>
-    <div class="movie-list" id="upcoming-movies">Loading...</div>
+    <div class="movie-list" id="upcoming-movies">
+      <!-- Add upcoming movies here -->
+      <div class="movie">
+        <strong>Movie:</strong> The Lives of Others<br>
+        <strong>Picked by:</strong> Ananya<br>
+        <strong>Date:</strong> April 12, 2025
+      </div>
+    </div>
 
     <h2>Past Screenings</h2>
-    <div class="movie-list" id="past-movies">Loading...</div>
+    <div class="movie-list" id="past-movies">
+      <!-- Add past movies here -->
+      <div class="movie">
+        <strong>Movie:</strong> In the Mood for Love<br>
+        <strong>Picked by:</strong> Rohan<br>
+        <strong>Date:</strong> April 5, 2025
+      </div>
+    </div>
 
-    <footer>&copy; 2025 Lights, Camera, UV!</footer>
+    <footer>
+      &copy; 2025 Lights, Camera, UV!
+    </footer>
   </div>
-
-  <script>
-    async function loadMovies(sheetUrl, containerId) {{
-      const response = await fetch(sheetUrl);
-      const text = await response.text();
-      const rows = text.trim().split('\\n').slice(1); // Skip header
-      const container = document.getElementById(containerId);
-      container.innerHTML = '';
-
-      rows.forEach(row => {{
-        const columns = row.split(',');
-        const date = columns[0];
-        const title = columns[1];
-        const picker = columns[2];
-        const movieDiv = document.createElement('div');
-        movieDiv.className = 'movie';
-        movieDiv.innerHTML = '<strong>Movie:</strong> ' + title + '<br>' +
-                             '<strong>Picked by:</strong> ' + picker + '<br>' +
-                             '<strong>Date:</strong> ' + date;
-        container.appendChild(movieDiv);
-      }});
-    }}
-
-    loadMovies("{upcoming_csv_url}", "upcoming-movies");
-    loadMovies("{past_csv_url}", "past-movies");
-  </script>
 </body>
 </html>
-"""
-
-# Save the HTML file
-html_file_path = "/mnt/data/index.html"
-with open(html_file_path, "w", encoding="utf-8") as f:
-    f.write(html_content)
-
-html_file_path
