--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     </header>
 
     <div class="intro">
-      <p>Movies of faraway lands. Giving glimpses of a foreign culture, in a foreign tongue, yet shedding light on something of our own.</p>
+      <p>Movies of faraway lands. Giving glimpses of a foreign culture, in a foreign tongue, yet shedding light on something near home.</p>
 
       <p>Welcome to <strong>Lights, Camera, UV!</strong></p>
 
       <p>A space for those who truly live and breathe cinema — not just as entertainment, but as art, culture, and storytelling.</p>
 
-      <p>This group is meant for movie connoisseurs and enthusiasts who appreciate brilliant films from across the globe — be it world cinema, Bollywood, Hollywood, indie gems, or rare festival classics. We would also welcome people into our group who want to start on a journey of exploring them.</p>
+      <p>This group is meant for movie connoisseurs and enthusiasts who appreciate brilliant films from across the globe — be it world cinema, Indian, Hollywood, indie gems, or rare festival classics. We would also welcome people into our group who want to start on a journey of exploring them.</p>
 
       <p>Here, we screen and discuss masterclass films that provoke thought, stir emotions, and offer a glimpse into faraway lands, unfamiliar cultures, and untold stories.</p>
 
