--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
+# Redefine the URLs after kernel reset
+upcoming_url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSrRnjooHdnGL3OARim9-6gD4RjXDTFhVY3Lb_i5sxq6YQJsVOhlcOfVfHblkT-6w_bDugpee3wVs_W/pub?gid=0&single=true&output=csv"
+past_url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSrRnjooHdnGL3OARim9-6gD4RjXDTFhVY3Lb_i5sxq6YQJsVOhlcOfVfHblkT-6w_bDugpee3wVs_W/pub?gid=598421041&single=true&output=csv"
 
+# Create the full HTML content
+html_final = f"""
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,102 +11,93 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lights, Camera, UV!</title>
   <style>
-    body {
+    body {{
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: #1e1e1e;
       color: #f5f5f5;
-      line-height: 1.6;
+      line-height: 1.8;
       padding: 20px;
-    }
-    .container {
+    }}
+    .container {{
       max-width: 900px;
       margin: auto;
-    }
-    header {
+    }}
+    header {{
       text-align: center;
       margin-bottom: 2rem;
-    }
-    header img {
-      width: 200px;
-      height: auto;
-    }
-    h1 {
+    }}
+    h1 {{
       color: #ffcc00;
-      margin: 1rem 0 0.5rem;
-    }
-    .intro p {
-      margin-bottom: 1.2rem;
-      text-align: justify;
-    }
-    h2 {
+    }}
+    h2 {{
       color: #ffcc00;
       border-bottom: 2px solid #444;
       padding-bottom: 0.3rem;
-    }
-    .movie-list {
+    }}
+    .movie-list {{
       margin: 1rem 0 2rem;
-    }
-    .movie {
+    }}
+    .movie {{
       background-color: #2a2a2a;
       padding: 1rem;
       border-radius: 8px;
       margin-bottom: 1rem;
-    }
-    .movie strong {
-      color: #ffffff;
-    }
-    footer {
+    }}
+    footer {{
       text-align: center;
       margin-top: 3rem;
       color: #888;
-    }
+    }}
   </style>
 </head>
 <body>
   <div class="container">
     <header>
-      <img src="lights-camera-uv.jpg" alt="Lights Camera UV Logo" />
       <h1>Lights, Camera, UV!</h1>
     </header>
 
-    <div class="intro">
-      <p>Movies of faraway lands. Giving glimpses of a foreign culture, in a foreign tongue, yet shedding light on something near home.</p>
-
-      <p>Welcome to <strong>Lights, Camera, UV!</strong></p>
-
-      <p>A space for those who truly live and breathe cinema — not just as entertainment, but as art, culture, and storytelling.</p>
-
-      <p>This group is meant for movie connoisseurs and enthusiasts who appreciate brilliant films from across the globe — be it world cinema, Indian, Hollywood, indie gems, or rare festival classics. We would also welcome people into our group who want to start on a journey of exploring them.</p>
-
-      <p>Here, we screen and discuss masterclass films that provoke thought, stir emotions, and offer a glimpse into faraway lands, unfamiliar cultures, and untold stories.</p>
-
-      <p>Weekly screenings will be held in UV’s mini theatre, featuring classics, critically acclaimed films, hidden gems, and everything in between…</p>
-    </div>
-
     <h2>Upcoming Screenings</h2>
-    <div class="movie-list" id="upcoming-movies">
-      <!-- Add upcoming movies here -->
-      <div class="movie">
-        <strong>Movie:</strong> The Lives of Others<br>
-        <strong>Picked by:</strong> Ananya<br>
-        <strong>Date:</strong> April 12, 2025
-      </div>
-    </div>
+    <div class="movie-list" id="upcoming-movies">Loading...</div>
 
     <h2>Past Screenings</h2>
-    <div class="movie-list" id="past-movies">
-      <!-- Add past movies here -->
-      <div class="movie">
-        <strong>Movie:</strong> In the Mood for Love<br>
-        <strong>Picked by:</strong> Rohan<br>
-        <strong>Date:</strong> April 5, 2025
-      </div>
-    </div>
+    <div class="movie-list" id="past-movies">Loading...</div>
 
-    <footer>
-      &copy; 2025 Lights, Camera, UV!
-    </footer>
+    <footer>&copy; 2025 Lights, Camera, UV!</footer>
   </div>
+
+  <script>
+    async function loadMovies(sheetUrl, containerId) {{
+      const response = await fetch(sheetUrl);
+      const text = await response.text();
+      const rows = text.trim().split('\\n').slice(1); // Skip header
+      const container = document.getElementById(containerId);
+      container.innerHTML = '';
+
+      rows.forEach(row => {{
+        const columns = row.split(',');
+        const date = columns[0];
+        const title = columns[1];
+        const picker = columns[2];
+        const movieDiv = document.createElement('div');
+        movieDiv.className = 'movie';
+        movieDiv.innerHTML = '<strong>Movie:</strong> ' + title + '<br>' +
+                             '<strong>Picked by:</strong> ' + picker + '<br>' +
+                             '<strong>Date:</strong> ' + date;
+        container.appendChild(movieDiv);
+      }});
+    }}
+
+    loadMovies("{upcoming_url}", "upcoming-movies");
+    loadMovies("{past_url}", "past-movies");
+  </script>
 </body>
 </html>
+"""
+
+# Save the HTML to a downloadable file
+html_output_path = "/mnt/data/index.html"
+with open(html_output_path, "w", encoding="utf-8") as f:
+    f.write(html_final)
+
+html_output_path
