--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-# Correcting the JavaScript template string error by using string concatenation instead of template literals
+# Updated version with emblem and intro restored alongside Sheety integration
 
-# Google Sheets CSV URLs
-upcoming_csv_url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSrRnjooHdnGL3OARim9-6gD4RjXDTFhVY3Lb_i5sxq6YQJsVOhlcOfVfHblkT-6w_bDugpee3wVs_W/pub?gid=0&single=true&output=csv"
-past_csv_url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSrRnjooHdnGL3OARim9-6gD4RjXDTFhVY3Lb_i5sxq6YQJsVOhlcOfVfHblkT-6w_bDugpee3wVs_W/pub?gid=598421041&single=true&output=csv"
-
-# Corrected HTML content
-html_fixed = f"""
+html_with_intro_and_emblem = f"""
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +13,7 @@ html_fixed = f"""
       font-family: 'Segoe UI', sans-serif;
       background-color: #1e1e1e;
       color: #f5f5f5;
-      line-height: 1.6;
+      line-height: 1.8;
       padding: 20px;
     }}
     .container {{
@@ -40,6 +35,7 @@ html_fixed = f"""
     .intro p {{
       margin-bottom: 1.2rem;
       text-align: justify;
+      font-size: 1.05rem;
     }}
     h2 {{
       color: #ffcc00;
@@ -93,42 +89,37 @@ html_fixed = f"""
   </div>
 
   <script>
-    async function loadMovies(sheetUrl, containerId) {{
-      try {{
-        const response = await fetch(sheetUrl);
-        const text = await response.text();
-        const rows = text.trim().split('\\n').slice(1);
-        const container = document.getElementById(containerId);
-        container.innerHTML = '';
-
-        rows.forEach(row => {{
-          const columns = row.split(',');
-          const date = columns[0];
-          const title = columns[1];
-          const picker = columns[2];
-          const movieDiv = document.createElement('div');
-          movieDiv.className = 'movie';
-          movieDiv.innerHTML = '<strong>Movie:</strong> ' + title + '<br>' +
-                               '<strong>Picked by:</strong> ' + picker + '<br>' +
-                               '<strong>Date:</strong> ' + date;
-          container.appendChild(movieDiv);
+    function fetchMovies(apiUrl, containerId, key) {{
+      fetch(apiUrl)
+        .then(res => res.json())
+        .then(data => {{
+          const list = document.getElementById(containerId);
+          list.innerHTML = "";
+          data[key].forEach(movie => {{
+            const div = document.createElement("div");
+            div.className = "movie";
+            div.innerHTML = "<strong>Movie:</strong> " + movie.movieTitle + "<br>" +
+                            "<strong>Picked by:</strong> " + movie.pickedBy + "<br>" +
+                            "<strong>Date:</strong> " + movie.date;
+            list.appendChild(div);
+          }});
+        }})
+        .catch(err => {{
+          document.getElementById(containerId).innerText = "Failed to load data.";
+          console.error(err);
         }});
-      }} catch (error) {{
-        document.getElementById(containerId).innerText = 'Failed to load movies.';
-        console.error("Error fetching sheet:", error);
-      }}
     }}
 
-    loadMovies("{upcoming_csv_url}", "upcoming-movies");
-    loadMovies("{past_csv_url}", "past-movies");
+    fetchMovies("{sheety_upcoming_url}", "upcoming-movies", "upcomingScreenings");
+    fetchMovies("{sheety_past_url}", "past-movies", "pastScreenings");
   </script>
 </body>
 </html>
 """
 
-# Save the fixed HTML
-fixed_html_path = "/mnt/data/index.html"
-with open(fixed_html_path, "w", encoding="utf-8") as f:
-    f.write(html_fixed)
+# Save the HTML file
+final_output_path = "/mnt/data/index.html"
+with open(final_output_path, "w", encoding="utf-8") as f:
+    f.write(html_with_intro_and_emblem)
 
-fixed_html_path
+final_output_path
